--- a/package.json
+++ b/package.json
@@ -18,6 +18,15 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "react-moralis": "^1.4.2",
+    "web3uikit": "^1.0.4",
+    "ethers": "^5.7.2",
+    "moralis-v1": "^1.12.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
